Modify package information

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@tailwindchina/tailwindcss-buttons",
+  "name": "tailwindchina-buttons",
   "version": "0.1.0",
   "description": "A TailwindCSS plugin that provides a set of button components based on the TailwindCSS palette.",
   "main": "src/index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tailwindchina/tailwindcss-buttons.git"
+    "url": "git+https://github.com/tailwindchina/tailwindchina-buttons.git"
   },
   "author": "codesinging(https://github.com/codesinging)",
   "dependencies": {
