--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tailwindchina-buttons",
+  "version": "1.0.3",
   "description": "A TailwindCSS plugin that provides a set of button components based on the TailwindCSS palette.",
   "main": "src/index.js",
   "license": "MIT",
